# project

./: kiberdb.sqlite3  manage.py  pyproject.toml
kiber/: asgi.py  settings.py  urls.py  wsgi.py
kiberdb/: admin.py  apps.py  models.py  serializers.py  views.py
kiberdb/migrations/: 0001_initial.py
users/: serializers.py  views.py
users/migrations/: 0001_initial.py
